--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
 		<title>"Sign-Up Page" for TOP Lessons</title>
 	</head>
 	<body>
-		
+		<div class="side-picture"></div>
+		<div class="signup-form">
+			<div class="above-form"></div>
+			<form class="signup-form" action="javacript:void(0)" method="get">
+				<div class="form-input-container">
+					<label for="fname">First Name</label>
+					<input name="fname" id="fname" type="text">
+				</div>
+				<div class="form-input-container">
+					<label for="lname">Last Name</label>
+					<input name="lname" id="lname" type="text">
+				</div>
+				<div class="form-input-container">
+					<label for="email">E-mail</label>
+					<input name="email" id="email" type="email">
+				</div>
+				<div class="form-input-container">
+					<label for="phone">Phone Number</label>
+					<input name="phone" id="phone" type="tel">
+				</div>
+				<div class="form-input-container">
+					<label for="pass">Password</label>
+					<input name="pass" id="pass" type="password">
+				</div>
+				<div class="form-input-container">
+					<label for="passConfirm">Confirm Password</label>
+					<input name="passConfirm" id="passConfirm" type="password">
+				</div>
+			</form>
+			<div class="below-form"></div>
+		</div>
 	</body>
 </html>
