Rearrange and add to CSS for form section of page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="side-picture"></div>
 		<div class="signup-form">
-			<div class="above-form">
+			<div class="around-form">
 				<p>This is just an example sign-up page -- this does not actually sign up for any accounts anywhere</p>
 				<p>This website is great - sign up below!</p>
 			</div>
@@ -39,7 +39,7 @@
 					<input name="passConfirm" id="passConfirm" type="password">
 				</div>
 			</form>
-			<div class="below-form">
+			<div class="around-form">
 				<button form="signup-form" type="submit">Sign Up</button>
 				<p>Already have an account? <a href="javascript:void(0)">Log In</a></p>
 			</div>
