Add basic title and attribution over side image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 		<title>"Sign-Up Page" for TOP Lessons</title>
 	</head>
 	<body>
-		<div class="side-picture"></div>
+		<div class="side-picture">
+			<div class="side-pic-top"></div>
+			<div class="side-pic-text"><h1>Sign-Up Example</h1></div>
+			<div class="side-pic-bottom"></div>
+			<div class="side-pic-image-attribution"><p><a href="https://unsplash.com/photos/castle-on-cliff-OlbCWO7068Y">Free Image from Unsplash, Photographed by Hannah Wright</a></p></div>
+		</div>
 		<div class="signup-form">
 			<div class="around-form">
 				<p>This is just an example sign-up page -- this does not actually sign up for any accounts anywhere</p>
