Use provided custom font in header on side picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="side-picture">
 			<div class="side-pic-top"></div>
-			<div class="side-pic-text"><h1>Sign-Up Example</h1></div>
+			<div class="side-pic-text"><img src="odin-lined.png" alt="Odin Project Logo"><h1>Sign-Up Example</h1></div>
 			<div class="side-pic-bottom"></div>
 			<div class="side-pic-image-attribution"><p><a href="https://unsplash.com/photos/castle-on-cliff-OlbCWO7068Y">Free Image from Unsplash, Photographed by Hannah Wright</a></p></div>
 		</div>
